--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top 500 YouTube Channels</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #121212; color: #fff; margin: 0; padding: 0; }
+        body { font-family: Arial, sans-serif; background-color: hsl(0, 0%, 7%); color: #fff; margin: 0; padding: 0; }
         .container { max-width: 1200px; margin: 40px auto; background: #1e1e1e; padding: 30px; border-radius: 15px; box-shadow: 0 8px 16px rgba(0, 0, 0, 0.8); }
         h1 { text-align: center; color: #e63946; font-size: 2.5rem; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); }
         table { width: 100%; border-collapse: collapse; margin-top: 20px; border-radius: 10px; overflow: hidden; }
@@ -29,7 +29,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>1</td><td>MrBeast</td><td>372,000,000</td></tr>
+                <tr><td>1</td><td><a href="https://realherobrineyt.github.io/Social-Media-Stats/UCX6OQ3DkcsbYNE6H8uQQuVA/Analytics" target="_blank" style="color: #e63946; text-decoration: none;">MrBeast</a></td><td>372,000,000</td></tr>
                 <tr><td>2</td><td>T-Series</td><td>288,000,000</td></tr>
                 <tr><td>3</td><td>Cocomelon</td><td>190,000,000</td></tr>
                 <tr><td>4</td><td>SET India</td><td>182,000,000</td></tr>
