--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
 <body>
     <div class="container">
         <h1>Social Media Stats</h1>
-        <a href="top500.html">Top List</a>
+        <a href="index.html">Top List</a>
     </div>
 </body>
 </html>
