--- a/index.html
+++ b/index.html
@@ -3,67 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top 500 YouTube Channels</title>
+    <title>Social Media Stats</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: hsl(0, 0%, 7%); color: #fff; margin: 0; padding: 0; }
-        .container { max-width: 1200px; margin: 40px auto; background: #1e1e1e; padding: 30px; border-radius: 15px; box-shadow: 0 8px 16px rgba(0, 0, 0, 0.8); }
-        h1 { text-align: center; color: #e63946; font-size: 2.5rem; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); }
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; border-radius: 10px; overflow: hidden; }
-        th, td { padding: 15px; text-align: left; }
-        th { background-color: #e63946; color: #fff; cursor: pointer; font-weight: bold; }
-        tr { transition: background 0.3s; }
-        tr:hover { background-color: #333; }
-        tr:nth-child(even) { background-color: #292929; }
-        tr:nth-child(odd) { background-color: #252525; }
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #1e1e1e, #2b2b2b);
+            color: #fff;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            padding: 50px;
+        }
+        .stats {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-bottom: 40px;
+        }
+        .stats a {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: #fff;
+            background: linear-gradient(45deg, #e63946, #ff6b6b);
+            padding: 15px 25px;
+            border-radius: 12px;
+            transition: 0.3s;
+            font-weight: bold;
+            box-shadow: 0px 5px 15px rgba(255, 107, 107, 0.5);
+        }
+        .stats a img {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+        }
+        .stats a:hover {
+            background: linear-gradient(45deg, #ff6b6b, #e63946);
+            transform: scale(1.1);
+        }
+        .social-links {
+            margin-top: 50px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.2);
+        }
+        .social-links h2 {
+            margin-bottom: 20px;
+        }
+        .social-links a {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: #fff;
+            margin: 0 15px;
+            padding: 12px 20px;
+            border-radius: 10px;
+            background: linear-gradient(45deg, #007bff, #0056b3);
+            transition: 0.3s;
+            font-weight: bold;
+            box-shadow: 0px 5px 15px rgba(0, 123, 255, 0.5);
+        }
+        .social-links a img {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+        }
+        .social-links a:hover {
+            background: linear-gradient(45deg, #0056b3, #007bff);
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Top 500 Most Subscribed YouTube Channels</h1>
-        <table id="channelTable">
-            <thead>
-                <tr>
-                    <th>Rank</th>
-                    <th>Channel Name</th>
-                    <th>Subscribers</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>1</td><td><a href="mrbeast.html" target="_blank" style="color: #e63946; text-decoration: none;">MrBeast</a></td><td>372,000,000</td></tr>
-                <tr><td>2</td><td>T-Series</td><td>288,000,000</td></tr>
-                <tr><td>3</td><td>Cocomelon</td><td>190,000,000</td></tr>
-                <tr><td>4</td><td>SET India</td><td>182,000,000</td></tr>
-                <tr><td>5</td><td>Vlad and Niki</td><td>135,000,000</td></tr>
-                <tr><td>6</td><td>Kids Diana Show</td><td>131,000,000</td></tr>
-                <tr><td>7</td><td>Like Nastya</td><td>126,000,000</td></tr>
-                <tr><td>8</td><td>Stokes Twins</td><td>116,000,000</td></tr>
-                <tr><td>9</td><td>Zee Music Company</td><td>115,000,000</td></tr>
-                <tr><td>10</td><td>PewDiePie</td><td>110,000,000</td></tr>
-                <tr><td>11</td><td>WWE</td><td>107,000,000</td></tr>
-                <tr><td>12</td><td>Goldmines</td><td>103,000,000</td></tr>
-                <tr><td>13</td><td>Sony SAB</td><td>99,800,000</td></tr>
-                <tr><td>14</td><td>BLACKPINK</td><td>96,100,000</td></tr>
-                <tr><td>15</td><td>ChuChu TV</td><td>95,300,000</td></tr>
-                <tr><td>16</td><td>KIMPRO</td><td>91,900,000</td></tr>
-                <tr><td>17</td><td>Zee TV</td><td>88,300,000</td></tr>
-                <tr><td>18</td><td>Alan's Universe</td><td>85,100,000</td></tr>
-                <tr><td>19</td><td>5-Minute Crafts</td><td>81,100,000</td></tr>
-                <tr><td>20</td><td>Baby Shark - Pinkfong</td><td>80,700,000</td></tr>
-                <tr><td>21</td><td>BANGTANTV</td><td>79,900,000</td></tr>
-                <tr><td>22</td><td>Colors TV</td><td>79,300,000</td></tr>
-                <tr><td>23</td><td>HYBE LABELS</td><td>76,700,000</td></tr>
-                <tr><td>24</td><td>A4</td><td>76,200,000</td></tr>
-                <tr><td>25</td><td>ZAMZAM ELECTRONICS TRADING</td><td>74,900,000</td></tr>
-                <tr><td>26</td><td>Justin Bieber</td><td>74,900,000</td></tr>
-                <tr><td>27</td><td>T-Series Bhakti Sagar</td><td>74,500,000</td></tr>
-                <tr><td>28</td><td>UR · Cristiano</td><td>74,100,000</td></tr>
-                <tr><td>29</td><td>Tips Official</td><td>73,300,000</td></tr>
-                <tr><td>30</td><td>Toys and Colors</td><td>72,800,000</td></tr>
+        <h1 style="font-size: 3em; text-transform: uppercase; letter-spacing: 2px;">Social Media Stats</h1>
+        <div class="stats">
+            <a href="youtube.html" target="_blank"><img src="https://imgs.search.brave.com/wOz16psaWAZ95xL0GadImem3HLRX1R0rdtCG-PlwjWc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wcmV2/aWV3LnJlZGQuaXQv/eW91dHViZS1pY29u/LWNvbG9yLWNoYW5n/ZS12MC03ZzZrYWt2/bjlnamQxLnBuZz93/aWR0aD03NjgmZm9y/bWF0PXBuZyZhdXRv/PXdlYnAmcz02OWQ4/ZmNhMGQ3ZDY2OGZk/ZDViZTBhYzc2Mjlk/NTUyNTUyZmMyYTU3" alt="YouTube"> YouTube Stats</a>
+            <a href="https://twitter.com/" target="_blank"><img src="https://imgs.search.brave.com/1RdqDPUBpc6kvfq83jF0yiE2nKPsdrigOAIYX821pU0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuaWNvbi1pY29u/cy5jb20vNDAyOS9Q/TkcvNTEyL3R3aXR0/ZXJfeF9uZXdfbG9n/b19zcXVhcmVfeF9p/Y29uXzI1NjA3NS5w/bmc" alt="Twitter"> Twitter Stats</a>
+            <a href="https://www.tiktok.com/" target="_blank"><img src="tiktok.png" alt="TikTok"> TikTok Stats</a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="instagram.png" alt="Instagram"> Instagram Stats</a>
+            <a href="https://bsky.app/" target="_blank"><img src="bluesky.png" alt="Bluesky"> Bluesky Stats</a>
+            <a href="https://www.twitch.tv/" target="_blank"><img src="twitch.png" alt="Twitch"> Twitch Stats</a>
+            <a href="https://www.spotify.com/" target="_blank"><img src="spotify.png" alt="Spotify"> Spotify Stats</a>
+        </div>
 
-
-            </tbody>
-        </table>
+        <div class="social-links">
+            <h2>My Socials</h2>
+            <a href="https://www.youtube.com/channel/UCiRU8yhg2-WAcOK_QdlahRw?sub_confirmation=1" target="_blank"><img src="https://imgs.search.brave.com/wOz16psaWAZ95xL0GadImem3HLRX1R0rdtCG-PlwjWc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wcmV2/aWV3LnJlZGQuaXQv/eW91dHViZS1pY29u/LWNvbG9yLWNoYW5n/ZS12MC03ZzZrYWt2/bjlnamQxLnBuZz93/aWR0aD03NjgmZm9y/bWF0PXBuZyZhdXRv/PXdlYnAmcz02OWQ4/ZmNhMGQ3ZDY2OGZk/ZDViZTBhYzc2Mjlk/NTUyNTUyZmMyYTU3" alt="YouTube"> YouTube</a>
+            <a href="https://x.com/Herobrine_Y_T" target="_blank"><img src="https://imgs.search.brave.com/1RdqDPUBpc6kvfq83jF0yiE2nKPsdrigOAIYX821pU0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuaWNvbi1pY29u/cy5jb20vNDAyOS9Q/TkcvNTEyL3R3aXR0/ZXJfeF9uZXdfbG9n/b19zcXVhcmVfeF9p/Y29uXzI1NjA3NS5w/bmc" alt="Twitter"> Twitter</a>
+            <a href="https://www.tiktok.com/@herobrinehdofficial" target="_blank"><img src="https://imgs.search.brave.com/ULe8nckJiwcBQLIbYViZ41tvpkRn4Px-o0gY6-BaynA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cG5ncGxheS5jb20v/d3AtY29udGVudC91/cGxvYWRzLzkvVGlr/VG9rLUxvZ28tVHJh/bnNwYXJlbnQtQmFj/a2dyb3VuZC5wbmc" alt="TikTok"> TikTok</a>
+        </div>
     </div>
 </body>
 </html>
-
