--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media Stats</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -39,6 +40,8 @@
             width: 30px;
             height: 30px;
             margin-right: 10px;
+            object-fit: contain; /* Maintain aspect ratio */
+            object-position: center; /* Center the image */
         }
         .stats a:hover {
             background: linear-gradient(45deg, #ff6b6b, #e63946);
@@ -71,6 +74,8 @@
             width: 30px;
             height: 30px;
             margin-right: 10px;
+            object-fit: contain; /* Maintain aspect ratio */
+            object-position: center; /* Center the image */
         }
         .social-links a:hover {
             background: linear-gradient(45deg, #0056b3, #007bff);
@@ -83,12 +88,12 @@
         <h1 style="font-size: 3em; text-transform: uppercase; letter-spacing: 2px;">Social Media Stats</h1>
         <div class="stats">
             <a href="youtube.html" target="_blank"><img src="https://imgs.search.brave.com/wOz16psaWAZ95xL0GadImem3HLRX1R0rdtCG-PlwjWc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wcmV2/aWV3LnJlZGQuaXQv/eW91dHViZS1pY29u/LWNvbG9yLWNoYW5n/ZS12MC03ZzZrYWt2/bjlnamQxLnBuZz93/aWR0aD03NjgmZm9y/bWF0PXBuZyZhdXRv/PXdlYnAmcz02OWQ4/ZmNhMGQ3ZDY2OGZk/ZDViZTBhYzc2Mjlk/NTUyNTUyZmMyYTU3" alt="YouTube"> YouTube Stats</a>
-            <a href="https://twitter.com/" target="_blank"><img src="https://imgs.search.brave.com/1RdqDPUBpc6kvfq83jF0yiE2nKPsdrigOAIYX821pU0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuaWNvbi1pY29u/cy5jb20vNDAyOS9Q/TkcvNTEyL3R3aXR0/ZXJfeF9uZXdfbG9n/b19zcXVhcmVfeF9p/Y29uXzI1NjA3NS5w/bmc" alt="Twitter"> Twitter Stats</a>
-            <a href="https://www.tiktok.com/" target="_blank"><img src="tiktok.png" alt="TikTok"> TikTok Stats</a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="instagram.png" alt="Instagram"> Instagram Stats</a>
-            <a href="https://bsky.app/" target="_blank"><img src="bluesky.png" alt="Bluesky"> Bluesky Stats</a>
-            <a href="https://www.twitch.tv/" target="_blank"><img src="twitch.png" alt="Twitch"> Twitch Stats</a>
-            <a href="https://www.spotify.com/" target="_blank"><img src="spotify.png" alt="Spotify"> Spotify Stats</a>
+            <a href="twitter.html" target="_blank"><img src="https://imgs.search.brave.com/1RdqDPUBpc6kvfq83jF0yiE2nKPsdrigOAIYX821pU0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuaWNvbi1pY29u/cy5jb20vNDAyOS9Q/TkcvNTEyL3R3aXR0/ZXJfeF9uZXdfbG9n/b19zcXVhcmVfeF9p/Y29uXzI1NjA3NS5w/bmc" alt="Twitter"> Twitter Stats</a>
+            <a href="https://www.tiktok.com/" target="_blank"><img src="https://imgs.search.brave.com/ULe8nckJiwcBQLIbYViZ41tvpkRn4Px-o0gY6-BaynA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cG5ncGxheS5jb20v/d3AtY29udGVudC91/cGxvYWRzLzkvVGlr/VG9rLUxvZ28tVHJh/bnNwYXJlbnQtQmFj/a2dyb3VuZC5wbmc" alt="TikTok"> TikTok Stats</a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt="Instagram"> Instagram Stats</a>
+            <a href="https://bsky.app/" target="_blank"><img src="https://imgs.search.brave.com/eBatm0e284xmTwqTJLb4dOfjYQoJm_bUHcOcD6y7NLk/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9naXRo/dWIuY29tL096enlD/emVjaC9ibHVlc2t5/LWxvZ28vcmF3L21h/aW4vZGlzdC9ibHVl/c2t5LWljb24uYmx1/ZS5zdmc" alt="Bluesky"> Bluesky Stats</a>
+            <a href="https://www.twitch.tv/" target="_blank"><img src="https://imgs.search.brave.com/0DBYNH3Z7QCU793F36e_lBYWZLIrZlD_aLu0XeL9bVY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4u/aWNvbnNjb3V0LmNv/bS9pY29uL2ZyZWUv/cG5nLTI1Ni9mcmVl/LXR3aXRjaC1sb2dv/LWljb24tZG93bmxv/YWQtaW4tc3ZnLXBu/Zy1naWYtZmlsZS1m/b3JtYXRzLS1tYWpv/ci13ZWJzaXRlcy1z/ZXQtcGFjay1sb2dv/cy1pY29ucy00NjE4/MzgucG5nP2Y9d2Vi/cCZ3PTI1Ng" alt="Twitch"> Twitch Stats</a>
+            <a href="https://www.spotify.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Spotify_logo_without_text.svg/2048px-Spotify_logo_without_text.svg.png" alt="Spotify"> Spotify Stats</a>
         </div>
 
         <div class="social-links">
