--- a/youtube.html
+++ b/youtube.html
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <h1>YouTube Analytics</h1>
-        <a href="index.html">Top List</a>
+        <a href="youtube_top_list.html">Top List</a>
         <br>
         <a href="top_list_views.html">Top List (Views)</a>
         <br>
